# thin-sag

./: .gitignore  Cargo.toml  README.md  build.rs  esclient.entitlements
.thin-sag/: policy.yaml
examples/: demo_thinsag_func.py
src/: action.rs  adapter.rs  api.rs  error.rs  job.rs  mac_ax.rs  main.rs  mask.rs  models.rs  policy.rs  screenshot.rs  tree.rs  ui_adapter.rs  vault.rs
src/guard/: audit.rs  es.rs  ipc.rs  mod.rs  rules.rs
src/mcp/: mod.rs  proxy.rs  server.rs  tools.rs
ui/: danger_pop.swift
ui/Pop.app/Contents/MacOS/: Pop
