[package]
name = "thin-sag"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }

security-framework = "3.2.0"

core-foundation = "0.10.0"
core-graphics = "0.24.0"
objc = "0.2.7"

anyhow = "1.0.98"

log = "0.4.27"
env_logger = "0.11.8"