[package]
name = "thin-sag"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }

security-framework = "3.2.0"

core-foundation = "0.10.0"
core-graphics = "0.24.0"
objc = "0.2.7"
image = "0.24"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
axum  = { version = "0.7.4", features = ["http1"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid  = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0.113"
lazy_static = "1.4"
regex = "1.8.0"
serde_regex = "1.1.0"
serde_yaml = "0.9"
globset    = "0.4"
once_cell  = "1.18"
dirs       = "5.0"
dashmap     = "5.5"
sha2 = "0.10.5"
libloading = "0.7.0"
core-foundation-sys = "0.8.0"
libc = "0.2"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8.0"